# src/routes/activo.routes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { crearActivo, listarActivos, obtenerActivo, actualizarActivo } from '../controllers/activo.controller';
+import { crearActivo, listarActivos, obtenerActivo, actualizarActivo, cambiarEstadoActivo } from '../controllers/activo.controller';
 
 const router: Router = Router();
 
@@ -7,5 +7,6 @@ router.get('/', listarActivos);
 router.post('/', crearActivo);
 router.get('/:id', obtenerActivo);
 router.patch('/:id', actualizarActivo);
+router.patch('/:id/estado', cambiarEstadoActivo);
 
 export default router;
